# PulseTrader

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  run_python.sh  test_clickhouse.py  test_environment.py  test_full_environment.py  verify_setup.py
.claude-flow/metrics/: system-metrics.json
.swarm/: memory.db-shm  memory.db-wal
config/: .env.example  data_collection.yaml  data_quality.yaml  data_sources.yaml
config/clickhouse/: indexes.sql
config/clickhouse/tables/: daily_quotes.sql  financial_data.sql  intraday_quotes.sql  realtime_snapshot.sql  stock_info.sql  trading_calendar.sql
config/logging/: logging.yaml
docker/: docker-compose.yml
docker/config/clickhouse/: quant_optimization.xml
docs/: 01-第一章-环境搭建与项目初始化.md  01-项目概述.md  02-技术架构.md  03-开发环境.md  04-数据获取.md  05-策略开发.md  06-技术指标库.md  07-风险管理.md  08-回测系统.md  09-Rust-Python混合架构.md  10-开发指导手册.md  11-第一阶段-环境搭建.md  12-第二阶段-基础框架.md  13-第三阶段-增强功能模块.md  13-第三阶段-数据层开发.md  14-第四阶段-Rust-Python混合架构实现.md  README.md
docs/01-第一章/: 1.1-Python3.12开发环境配置.md  1.2-ClickHouse数据库安装与配置.md  1.3-项目结构创建与基础配置.md  1.4-开发工具与环境验证.md  README.md
docs/02-第二章/: 2.1-Akshare数据接口集成.md  2.1-通达信数据格式解析.md  2.2-Rust高性能数据处理.md  2.2-数据清洗与验证.md  2.3-ClickHouse数据表设计.md  2.3-Python-Rust集成.md  2.4-ClickHouse批量存储技术.md  2.4-配置管理与优化.md  2.5-数据更新和维护系统.md  2.5-自动化数据管道.md  README.md
engine/: Cargo.toml
pulse_trader/analysis/: visualization.py
pulse_trader/backtest/: __init__.py  engine.py  metrics.py
pulse_trader/config/: manager.py
pulse_trader/data/: __init__.py  cache.py  realtime.py  source.py
pulse_trader/strategies/: __init__.py  ma_cross.py  manager.py
pulse_trader/utils/: font_config.py
rust/: Cargo.toml
rust/benches/: tdx_parser_bench.rs
rust/src/: lib.rs
rust/src/parsers/: mod.rs  tdx_day.rs  utils.rs
rust/src/processors/: aggregator.rs  calculator.rs  cleaner.rs  mod.rs  transformer.rs
rust/tests/: tdx_parser_tests.rs
scripts/: check_clickhouse_auth.py  debug_cache.py  debug_detailed.py  init_clickhouse_tables.py  install_chinese_fonts.py  manage_partitions.py  mvp_test.py  quick_test_cache.py  setup_clickhouse_user.py  setup_env.sh  test_cache_with_docker.py  test_clickhouse_connect.py  test_clickhouse_connect_fixed.py  test_clickhouse_connect_smart.py  test_config_manager.py  test_data_collection.py  test_data_processing.py  test_enhanced_backtest.py  test_insert_format.py  test_logic.py  test_multi_strategy.py  test_realtime_collector.py  test_realtime_manager.py  verify_env.py
scripts/data/: download_tdx_data.py
scripts/database/: create_tables.sql
src/config/: __init__.py  config_manager.py
src/data/: database.py
src/data/collectors/: base_collector.py  historical.py  realtime.py  stock_info.py
src/data/processors/: __init__.py  cleaner.py  transformer.py  validator.py
src/data/storage/: batch_insert.py
src/utils/: datetime_utils.py  helpers.py  logging.py
tests/: conftest.py
tests/unit/: test_config.py  test_helpers.py
