[project]
name = "pulse-trader"
version = "0.1.0"
description = "A股量化交易系统"
authors = [
    {name = "jackluo",email = "net.webjoy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
name = "pulse-trader"
version = "0.1.0"
description = "A股量化交易系统"
authors = ["jackluo <net.webjoy@gmail.com>"]
packages = [{include = "pulse_trader"}]

[tool.poetry.dependencies]
python = "^3.11"
maturin = ">=1.9.6,<2.0.0"
tushare = ">=1.4.24,<2.0.0"
akshare = ">=1.17.76,<2.0.0"
pytdx = ">=1.72,<2.0"
fastapi = ">=0.120.1,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
sqlalchemy = ">=2.0.44,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
pandas = "^2.3.3"
numpy = "^2.3.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
black = ">=25.9.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
mypy = ">=1.18.2,<2.0.0"
