[tool.poetry]
name = "pulse-trader"
version = "0.1.0"
description = "A股量化交易系统"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.5"
akshare = "^1.17.87"
clickhouse-driver = "0.2.7"
clickhouse-pool = "0.6.1"
redis = "5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
pylint = "^3.0.0"
mypy = "^1.0.0"
maturin = "^1.10.2"

[tool.maturin]
python-source = "python"
module-name = "pulse_trader_rust._core"
features = ["pyo3/extension-module"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]
