[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
numpy = "0.27.0"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }


[lib]
name = "pulse_trader_engine"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
features = ["pyo3/extension-module"]
module-name = "pulse_trader_engine._pulse_trader_engine"
python-source = "../"

# 发布优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"